--- a/index.html
+++ b/index.html
@@ -11,3 +11,10 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<script>
+  document.getElementById("newTabLink").addEventListener("click", function(event) {
+    event.preventDefault();
+    window.open(event.target.href, "_blank");
+  });
+</script>
