resume page, reactive, so small devices display skills list and download link vs the iframe that doesn't seem to display properly on smaller screens

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </body>
 </html>
 
-<script>
+<!-- <script>
   document.getElementById("newTabLink").addEventListener("click", function(event) {
     event.preventDefault();
     window.open(event.target.href, "_blank");
   });
-</script>
+</script> -->
